--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .nextflow*
+.nextflow/*
 work
+work/*
 results
+results/*
 reference_data
-bin/cellranger-10.0.0
+reference_data/*
+bin/cellranger-10.0.0/
+bin/cellranger-10.0.0/*
